--- a/Code.ipynb
+++ b/Code.ipynb
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
+   "execution_count": null,
    "id": "ec9b176f-3e4d-49f9-bdb8-8d4d9f0186b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# we will import this library to handle how the arabic characters display \n",
+    "# This library to handle how the arabic characters display \n",
     "import arabic_reshaper \n",
-    "# this function helps us in ordering the text as arabic lan is RTL\n",
+    "# This function helps us in ordering the text as arabic lan is RTL\n",
     "from bidi.algorithm import get_display"
    ]
   },
@@ -1758,7 +1758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 820,
+   "execution_count": null,
    "id": "15151aea-654e-4fd9-bf0e-3cbbf7e36fa5",
    "metadata": {},
    "outputs": [
@@ -1781,7 +1781,7 @@
     }
    ],
    "source": [
-    "# To use this column as an integer, I remove the \"year\" word using \"split\" and change the column name to be more understandable\n",
+    "# To use this column as an integer, I removed the \"year\" word using \"split\" and change the column name to be more understandable\n",
     "df['exper'] = df['exper'].map(lambda x: int(x.split(' ')[0]))\n",
     "df.rename(columns={'exper' : 'year of exper'} , inplace=True)"
    ]
@@ -3507,7 +3507,7 @@
    "id": "dced482d-2754-451c-b088-0cb7ad4dc9ed",
    "metadata": {},
    "source": [
-    "#### AnswerQ1: We can observe that the Riyadh region had the most job postings, accounting for 44.8% of the total.\r\n"
+    "#### AnswerQ1: We can observe that the Riyadh region had the most job postings, accounting for 44.8% of the total.\n"
    ]
   },
   {
